# Task-board

./: Cargo.toml  README.md
app-server/: Cargo.toml  README.md
app-server/src/: error.rs  main.rs
app-server/src/api/: mod.rs  todo.rs
app-server/src/cash_client/: client.rs
app-server/src/json/: mod.rs  scheme.rs
app-server/src/service/: mod.rs  todo.rs
mini-casher/: Cargo.toml  README.md
mini-casher/src/: client.rs  lib.rs  server.rs
mini-casher/src/core/: command.rs  connection.rs  error.rs  frames.rs  mod.rs
static/: README.md  package-lock.json  package.json
static/components/: layout.js
static/components/icons/: doneItem.js  logo.js  newItem.js  removeItem.js
static/components/ui/: list.js  list.module.css  navbar.js  navbar.module.css
static/pages/: auth.js  index.js  todo.js
static/styles/: globals.css
