[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors=["German <gerlvndv@gmail.com>"]


[dependencies]
mini-casher = {path = "../mini-casher"}
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.2"
bytes = "1.4.0"
pretty_env_logger = "0.4.0"
log = "0.4.17"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
async-trait = "0.1.68"
thiserror = "1.0.40"
url = "2.3.1"
[dependencies.uuid]
version = "1.3.1"
features = ["v4"]