[package]
name = "mini-casher"
version = "0.1.0"
edition = "2021"
authors=["German <gerlvndv@gmail.com>"]


[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = "0.1.12"
bytes = "1.4.0"
thiserror = "1.0.40"
atoi = "2.0.0"
pretty_env_logger = "0.4.0"
log = "0.4.17"

[[bin]]
name = "cash-server"
path = "src/bin/cash-server.rs"

[[bin]]
name = "cmd"
path = "src/bin/cmd.rs"
